<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.example.vladimir.croappwebapi.activities.ContactActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/image_cro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:src="@mipmap/cro" />

            <TextView
                android:id="@+id/contact_tv"
                android:layout_below="@id/image_cro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/enter_contact_tv"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/polinja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_tv"
                android:layout_centerHorizontal="true"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="Полињата означени со * се задолжителни"
                android:textColor="@color/white" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/namewrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/polinja"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameSurname"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLength="25"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mailwrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/namewrapper"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailAdresa"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLength="25"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/phonewrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mailwrapper"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:maxLength="15"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/phonewrapper"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/accept_policies_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/accept_agreement"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/accept_policies_tv"
                    android:text="@string/seePolicy"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_below="@id/policy"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <CheckBox
                        android:id="@+id/yes"
                        android:layout_marginRight="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Да"/>
                    <CheckBox
                        android:id="@+id/no"
                        android:layout_marginLeft="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Не"/>

                </LinearLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/submit_answer" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>